# sql101-presentation

./: .gitignore  sql_presentation.tex
presentation/: sql_presentation.tex
sql/: .env  Cargo.toml  baseball.db  cycling.db  dump.sql
sql/docker/: Dockerfile  dump.sql  run_psql.sh  up.sh
sql/migrations/2020-12-17-203455_create_nations_table/: down.sql  up.sql
sql/migrations/2020-12-17-203555_create_riders_table/: down.sql  up.sql
sql/migrations/2020-12-17-203633_create_teams_table/: up.sql
sql/migrations/2020-12-17-203659_create_races_table/: up.sql
sql/migrations/2020-12-17-203734_create_riders_teams_table/: down.sql  up.sql
sql/migrations/2020-12-17-203755_create_riders_races_table/: down.sql  up.sql
sql/migrations/2020-12-17-210417_create_seeds/: up.sql
sql/migrations/2020-12-18-131449_create_players/: up.sql
sql/migrations/2020-12-18-131741_create_teams/: up.sql
sql/migrations/2020-12-18-185121_create_games/: up.sql
sql/migrations/2020-12-18-200618_create_players_games/: down.sql  up.sql
sql/migrations/2020-12-21-151706_create_players_teams/: down.sql  up.sql
sql/src/: main.rs  schema.rs
