[package]
name = "sql"
version = "0.1.0"
authors = ["Ethan Kent <ekent@spoonflower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
